content/terraform-enterprise/1.2.x/docs/enterprise/registry/using.mdx
---
page_title: Use artifacts from the Terraform Enterprise private registry
description: >-
  Learn how to use artifacts from the Terraform Enterprise private registry in
  your Terraform configuration.
source: terraform-docs-common
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-02T17:54:50Z
last_modified: 2026-02-02T17:55:25Z
# END AUTO GENERATED METADATA
---

# Use artifacts from the HCP Terraform private registry

All users in an organization can view the HCP Terraform private registry and use the available providers<!-- BEGIN: TFC:only name:stacks-tfe -->, Stack component configurations,<!-- END: TFC:only name:stacks-tfe --> and modules. A private registry has some key requirements and differences from the [public Terraform Registry](/terraform/registry):

-   **Location:** Search for providers, modules,<!-- BEGIN: TFC:only name:stacks-tfe --> Stacks,<!-- END: TFC:only name:stacks-tfe --> and usage examples in the HCP Terraform private registry UI.
    <!-- BEGIN: TFC:only name:stacks-tfe -->
-   **Stacks support:** The private registry supports publishing and using Stack component configurations.
    <!-- END: TFC:only name:stacks-tfe -->
-   **Provider and Module block `source` argument:** Private providers and modules use a different format.
-   **Terraform version:** HCP Terraform workspaces<!-- BEGIN: TFC:only name:stacks-tfe --> and Stacks<!-- END: TFC:only name:stacks-tfe --> using version 0.11 and higher can automatically access private modules during Terraform runs. Workspaces<!-- BEGIN: TFC:only name:stacks-tfe --> and Stacks<!-- END: TFC:only name:stacks-tfe --> using version 0.13 and higher can also automatically access private providers.
-   **Authentication:** If you run Terraform on the command line, you must [authenticate](#authentication) to HCP Terraform or your instance to use artifacts in your organization’s private registry.

HCP Terraform supports using modules in written configuration or through the [no-code provisioning workflow](/terraform/enterprise/workspaces/no-code-provisioning/provisioning).

## Find artifacts

To find available providers<!-- BEGIN: TFC:only name:stacks-tfe -->, Stack component configurations,<!-- END: TFC:only name:stacks-tfe --> and modules, select **Registry** from the side navigation in your organization.

Click **Providers**<!-- BEGIN: TFC:only name:stacks-tfe -->, **Stack component configurations**, <!-- END: TFC:only name:stacks-tfe --> or **Modules** to toggle between lists of available artifacts in the private registry. You can also use the search field to filter for titles that contain a specific keyword. The search does not include `README`s or resource details.

### Shared providers and modules in Terraform Enterprise

On Terraform Enterprise, your [registry sharing](/terraform/enterprise/admin/application/registry-sharing) configuration may grant you access to another organization's providers and modules. Providers and modules that are shared with your current organization have a **Shared** badge in the private registry (below). Providers and modules in your current organization that are shared with other organizations have a badge that says **Sharing**.

### View artifact details and versions

Click an artifact to view its details page. Use the **Versions** menu in the upper right to switch between the available versions, and use the **Readme**, **Inputs**, **Outputs**, **Dependencies**, and **Resources**<!-- BEGIN: TFC:only name:stacks-tfe --> or **Components**<!-- END: TFC:only name:stacks-tfe --> tabs to view more information about the selected version.

### View nested modules and examples

Use the **Submodules** menu to navigate to the detail pages for any nested modules. Use the **Examples** menu to navigate to the detail pages for any available example modules.

## Provision infrastructure from no-code ready modules

You can use modules marked **No-Code Ready** to create a new workspace and automatically provision the module's resources without writing any Terraform configuration. Refer to [Provisioning No-Code Infrastructure](/terraform/enterprise/workspaces/no-code-provisioning/provisioning) for details.

## Use providers and modules in workspaces

> **Hands-on:** Try the [Use Modules from the Registry](/terraform/tutorials/modules/module-use) tutorial.

For Terraform configurations, the syntax to define public providers in a private registry is the same as for providers that you use directly from the public Terraform Registry. The syntax for the [provider block](/terraform/language/providers/configuration#provider-configuration-1) `source` argument is `<NAMESPACE>/<PROVIDER_NAME>`.

```hcl
terraform {
  required_providers {
    google = {
      source = "hashicorp/google"
      version = "4.0.0"
    }
  }
}
```

The syntax for referencing public modules in the [module block](/terraform/language/modules/syntax) `source` argument is `<NAMESPACE>/<MODULE_NAME>/<PROVIDER_NAME>`.

```hcl
module "subnets" {
  source  = "hashicorp/subnets/cidr"
  version = "1.0.0"
}
```

### Use private providers and modules

The syntax for referencing private providers in the [provider block](/terraform/language/providers/configuration#provider-configuration-1) `source` argument is `<HOSTNAME>/<NAMESPACE>/<PROVIDER_NAME>`. For the SaaS version of HCP Terraform, the hostname is `app.terraform.io`.

```hcl
terraform {
  required_providers {
    random = {
      source = "app.terraform.io/demo-custom-provider/random"
      version = "1.1.0"
    }
  }
}
```

The syntax for referencing private modules in the [module block](/terraform/language/modules/syntax) `source` argument is `<HOSTNAME>/<ORGANIZATION>/<MODULE_NAME>/<PROVIDER_NAME>`.

-   **Hostname:** For the SaaS version of HCP Terraform, use `app.terraform.io`. In Terraform Enterprise, use the hostname for your instance or the [generic hostname](/terraform/enterprise/registry/using#generic-hostname-terraform-enterprise).
-   **Organization:** If you are using a shared module with Terraform Enterprise, the module's organization name may be different from your organization's name. Check the source string at the top of the module's registry page to find the proper organization name.

```hcl
module "vpc" {
  source  = "app.terraform.io/example_corp/vpc/aws"
  version = "1.0.4"
}
```

### Generic Hostname - HCP Terraform and Terraform Enterprise

You can use the generic hostname `localterraform.com` in module sources to reference modules without modifying the HCP Terraform or Terraform Enterprise instance. When you run Terraform, it automatically requests any `localterraform.com` modules from the instance it runs on.

```hcl
module "vpc" {
  source  = "localterraform.com/example_corp/vpc/aws"
  version = "1.0.4"
}
```

~> **Important**: CLI-driven workflows require Terraform CLI v1.4.0 or above.

To test configurations on a developer workstation without the remote backend configured, you must replace the generic hostname with a literal hostname in all module sources and then change them back before committing to VCS. We are working on making this workflow smoother, but we only recommend `localterraform.com` for large organizations that use multiple Terraform Enterprise instances.

### Version Requirements

Terraform version 0.11 or later is required to use private modules in HCP Terraform workspaces and to use the CLI to apply configurations with private modules. Terraform version 0.13 and later is required to use private providers in HCP Terraform workspaces and apply configurations with private providers.

<!-- BEGIN: TFC:only name:stacks-tfe -->

## Use providers and modules in Stack components

Stack components can source providers and modules from the following:

-   Remote addresses
    -   Git Addresses
    -   HTTP/HTTPS Addresses
-   HCP Terraform private registry
-   Terraform public registry

### Providers

To source a provider from Github, use the following syntax:
`git::ssh://github.com/<ORGANIZATION_NAME>/repository.git/<SUB-PATH-TO-YOUR-PROVIDER>`:

```hcl
required_providers {
  my_provider_name = {
    source  = "git::ssh://github.com/<ORGANIZATION_NAME>/repository.git/<SUB-PATH-TO-YOUR-PROVIDER>"
    version = "~> 5.59.0"
  }
}
```

To source a provider from a remote address, use a URL that points to a `tar.gz` file:

```hcl
required_providers {
  my_provider_name = {
    source  = "https://example.com/infra/compute?archive=tar.gz"
    version = "~> 1.0.0"
  }
}
```

To source a provider from the public [Terraform registry](https://registry.terraform.io/), use `<NAMESPACE>/<PROVIDER_NAME>` syntax and reference that provider's documentation for the specifics.

The following example sources the public `kubernetes` provider and configures it:

```hcl
required_providers {
  kubernetes = {
    source  = "hashicorp/kubernetes"
    version = "~> 2.32.0"
  }
}

provider "kubernetes" "main" {
  config {
    host                   = component.cluster.cluster_url
    cluster_ca_certificate = component.cluster.cluster_ca
    token                  = component.cluster.cluster_token
  }
}
```

The syntax for referencing a provider from the HCP Terraform private registry is `app.terraform.io/<NAMESPACE>/<MODULE_NAME>/<PROVIDER_NAME>`. The following example sources a provider named `my-random` from the private registry:

```hcl
required_providers {
  my-random = {
    source  = "app.terraform.io/my-cool-org/demo-module/my-random"
    version = "~> 2.32.0"
  }
}

provider "my-random" "main" {
  config {
    # ...
  }
}
```

To learn more about specific syntax for providers in components, refer to [`provider` block](/terraform/language/block/stack/tfcomponent/provider). To learn more about defining providers in Stacks, refer to [Declare providers](/terraform/language/stacks/component/declare-providers).

### Modules

Each `component` block specifies the Terraform module to use as the source for that component.

To source a module from a Remote Git address, use the following syntax:
`git::<protocol>://<hostname>/<resource-path>.git//path/to/dir?ref=<git reference>`.

Additional Details:

-   Supported protocols are HTTP/HTTPS and SSH.
-   Userinfo is not allowed in the URL (username & password).
-   Valid Refs (`?ref=`) include: Full commit sha, Git Tag, and Branch name.

The following example sources a module named `kube` from a GitHub repository:

```hcl
component "my-component" {
  source = "git::https://github.com/my-cool-gh-org/kube.git?ref=0.1.0"

  # ...
}
```

To source a module from a remote address, use a URL that points to a `tar.gz` file:

```hcl

component "my-component" {
  source = "https://example.com/infra/compute?archive=tar.gz"

  # ...
}
```

To source a module from the public [Terraform registry](https://registry.terraform.io/), use `<NAMESPACE>/<MODULE_NAME>` syntax and reference that module's documentation for the specific syntax.

The following example component sources the public `iam` module:

```hcl
component "auth" {
  source  = "terraform-aws-modules/iam/aws"
  version = "6.2.1"

  # ...
}
```

The syntax for referencing a module from the HCP Terraform private registry  is `app.terraform.io/<NAMESPACE>/<MODULE_NAME>`. The following example sources a module named `demo-module` from the private registry:

```hcl
component "demo" {
    source  = "app.terraform.io/my-cool-org/demo-module"
    version = "~> 2.32.0"
  # ...
}
```

To learn more about components syntax, refer to the [`component` block reference](/terraform/language/block/stack/tfcomponent/component).

## Use a Stack component configuration

@include 'beta.mdx'

You can [publish component configurations](/terraform/enterprise/registry/publish-stack-configuration) to your private registry to let other users in your organization create a new Stack using that configuration.

To use a component configuration published in the private registry, do the following:

1.  In HCP Terraform, navigate to your organization.
2.  Select **Registry** from the sidebar, then **Private Library**.
3.  Click the name of the component configuration you want to use.
4.  Copy the `stack` code block snippet from **Usage instructions**. The `stack` block includes the source address, version constraint, and any required input variables.
5.  Create a `<NAME>.tfcomponent.hcl` file and paste the `stack` block snippet.
6.  Add a `required_providers` block and specify the provider versions for your Stack. To learn more, refer to [Declare providers](/terraform/language/stacks/component/declare-providers).
7.  If your `stack` block specifies any input variables, such as `var.<NAME>`, define `variable` blocks to pass in those values. To learn more, refer to the[`variable` block reference](/terraform/language/block/stack/tfcomponent/variable).
8.  Add a `.terraform-version` file and specify a Terraform version for your Stack, you must specify Terraform v1.14.2 or above.
9.  Run `terraform stacks init` to create a provider lock file and install your providers.
10. Create a [deployment file](/terraform/language/stacks/deploy/config), `<NAME>.tfdeploy.hcl`, and specify values for each required input variable. You can refer to the **Inputs** tab on the component configuration's details page to learn more about the required variables.
11. [Create your Stack](/terraform/enterprise/stacks/create) in HCP Terraform.

Defining a `stack` block in a `<NAME>.tfcomponent.hcl` file sources a Stack's entire component configuration, including all of the Stack's components and providers. To learn more about the `stack` block, refer to the [`stack` block reference](/terraform/language/block/stack/tfcomponent/stack).

<!-- END: TFC:only name:stacks-tfe -->

## Provider and module availability

A workspace<!-- BEGIN: TFC:only name:stacks-tfe --> or Stack <!-- END: TFC:only name:stacks-tfe -->can only use private providers and modules from its own organization's registry. When using providers or modules from multiple organizations in the same configuration, we recommend:

-   **HCP Terraform:** [Add providers and modules to the registry](/terraform/enterprise/registry/publish-modules#sharing-modules-across-organizations) for each organization that requires access.

-   **Terraform Enterprise:** Check your site's [registry sharing](/terraform/enterprise/admin/application/registry-sharing) configuration for workspaces. Workspaces can also use private providers and modules from organizations that are sharing with the workspace's organization.

## Authentication configurations with private providers and modules

To authenticate with HCP Terraform, you can use either a [user token](/terraform/enterprise/users-teams-organizations/users#api-tokens) or a [team token](/terraform/enterprise/users-teams-organizations/api-tokens#team-api-tokens). The type of token you choose may grant different permissions.

-   **User Token**: Allows you to access providers and modules from any organization in which you are a member. You are a member of an organization if you belong to any team in that organization. You can also access modules from any organization that is sharing modules with any of your organizations.

    -> **Note:** When SAML SSO is enabled, there is a [session timeout for user API tokens](/terraform/enterprise/saml/login#api-token-expiration), requiring you to periodically re-authenticate through the web UI. Expired tokens produce a _401 Unauthorized_ error. A SAML SSO account with [IsServiceAccount](/terraform/enterprise/saml/attributes#isserviceaccount) is treated as a service account and will not have the session timeout.

-   **Team Token**: Allows you to access the private registry of that team's organization and the registries from any other organizations that have configured sharing.

_Permissions Example_

A user belongs to three organizations (1, 2, and 3), and organizations 1 and 2 share access with each other. In this case, the user's token gives them access to the private registries for all of the organizations they belong to: 1, 2, and 3. However, a team token from a team in organization 1 only gives the user access to the private registry in organizations 1 and 2.

#### Configure authentication

To configure authentication to HCP Terraform or your Terraform Enterprise instance, you can:

-   (Terraform 0.12.21 or later) Use the [`terraform login`](/terraform/cli/commands/login) command to obtain and save a user API token.
-   Create a token and [manually configure credentials in the CLI config file][cli-credentials].

Make sure the hostname matches the hostname you use in provider and module sources because if the same HCP Terraform server is available at two hostnames, Terraform will not know that they reference the same server. To support multiple hostnames for provider and module sources, use the `terraform login` command multiple times and specify a different hostname each time.

[user-token]: /terraform/enterprise/users-teams-organizations/users#api-tokens

[cli-credentials]: /terraform/cli/config/config-file#credentials

[permissions-citation]: #intentionally-unused---keep-for-maintainers
